DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/amc__Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>The Purchase Order Custom Object lets you keep a track of the POs that have been issued to suppliers relating to your Projects</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO:{000000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>