DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/fields/amc__Account__c.field-meta.xml
<CustomField>
    <fullName>amc__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account this Purchase Order relates to</description>
    <inlineHelpText>Lookup to the Account this Purchase Order relates to</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>