DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/fields/amc__Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount__c</fullName>
    <description>Identifies the sum amount of all related Purchase Order Items</description>
    <inlineHelpText>Identifies the sum amount of all related Purchase Order Items</inlineHelpText>
    <label>Amount</label>
    <summarizedField>amc__Purchase_Order_Item__c.amc__Amount__c</summarizedField>
    <summaryForeignKey>amc__Purchase_Order_Item__c.amc__Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>