DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/fields/amc__Attention__c.field-meta.xml
<CustomField>
    <fullName>amc__Attention__c</fullName>
    <description>Identifies who invoices/expenses relating to this Purchase Order should be addressed to</description>
    <inlineHelpText>Identifies who invoices/expenses relating to this Purchase Order should be addressed to</inlineHelpText>
    <label>Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>