DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/fields/amc__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Delivery_Date__c</fullName>
    <description>Identifies the expected Delivery Date for the Purchase Order</description>
    <inlineHelpText>Identifies the expected Delivery Date for the Purchase Order</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>