DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/fields/amc__Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>amc__Delivery_Instructions__c</fullName>
    <description>Identifies any delivery instructions relating to this Purchase order</description>
    <inlineHelpText>Identifies any delivery instructions relating to this Purchase order</inlineHelpText>
    <label>Delivery Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>