DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/fields/amc__Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Status__c</fullName>
    <description>Identifies the status of the Purchase Order</description>
    <inlineHelpText>Identifies the status of the Purchase Order</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Paid - Partial</fullName>
            </value>
            <value>
                <fullName>Paid - In Full</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>