DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/fields/amc__Type__c.field-meta.xml
<CustomField>
    <fullName>amc__Type__c</fullName>
    <description>Identifies the Type of Purchase Order</description>
    <inlineHelpText>Identifies the Type of Purchase Order</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>