DigicielFull/force-app/main/default/objects/amc__Purchase_Order__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>